prover-ray/zkcdriver/testdata/synced/invalid/field_01.zkc
//error:3:9-14:expected type 𝔽
fn f(x:u32) -> (r:𝔽) {
    r = x + 1
    return
}
